// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`md parser frontmatter.md: config 1`] = `
Object {
  "aspectRatio": 1.7777777777777777,
  "canvasWidth": 980,
  "colorSchema": "auto",
  "download": false,
  "fonts": Object {
    "italic": false,
    "local": Array [],
    "mono": Array [
      "\\"Fira Code\\"",
      "ui-monospace",
      "SFMono-Regular",
      "Menlo",
      "Monaco",
      "Consolas",
      "\\"Liberation Mono\\"",
      "\\"Courier New\\"",
      "monospace",
    ],
    "provider": "google",
    "sans": Array [
      "\\"Roboto\\"",
      "\\"Lato\\"",
      "ui-sans-serif",
      "system-ui",
      "-apple-system",
      "BlinkMacSystemFont",
      "\\"Segoe UI\\"",
      "Roboto",
      "\\"Helvetica Neue\\"",
      "Arial",
      "\\"Noto Sans\\"",
      "sans-serif",
      "\\"Apple Color Emoji\\"",
      "\\"Segoe UI Emoji\\"",
      "\\"Segoe UI Symbol\\"",
      "\\"Noto Color Emoji\\"",
    ],
    "serif": Array [
      "\\"Mate SC\\"",
      "ui-serif",
      "Georgia",
      "Cambria",
      "\\"Times New Roman\\"",
      "Times",
      "serif",
    ],
    "webfonts": Array [
      "Roboto",
      "Lato",
      "Mate SC",
      "Fira Code",
    ],
    "weights": Array [
      "200",
      "400",
      "600",
    ],
  },
  "highlighter": "prism",
  "info": false,
  "layout": "cover",
  "monaco": "dev",
  "remoteAssets": true,
  "routerMode": "history",
  "selectable": false,
  "theme": "default",
  "themeConfig": Object {},
  "title": "Hi",
}
`;

exports[`md parser frontmatter.md: features 1`] = `
Object {
  "katex": false,
  "mermaid": false,
  "monaco": false,
  "tweet": false,
}
`;

exports[`md parser frontmatter.md: slides 1`] = `
Array [
  Object {
    "content": "
# Hi
",
    "end": 8,
    "frontmatter": Object {
      "fonts": Object {
        "mono": "Fira Code",
        "sans": "Roboto, Lato",
        "serif": "Mate SC",
      },
      "layout": "cover",
      "title": "Hi",
    },
    "index": 0,
    "note": undefined,
    "raw": "---
layout: cover
fonts:
  sans: Roboto, Lato
  serif: Mate SC
  mono: Fira Code
title: Hi
---

# Hi

",
    "start": 0,
    "title": "Hi",
  },
  Object {
    "content": "
# Hello
",
    "end": 16,
    "frontmatter": Object {
      "layout": "center",
      "meta": Object {
        "duration": 12,
        "title": "FooBar",
      },
    },
    "index": 1,
    "note": "This is notes",
    "raw": "---
meta:
  title: FooBar
  duration: 12
layout: center
---

# Hello

<!--
This is notes
-->
",
    "start": 8,
    "title": "Hello",
  },
  Object {
    "content": "
# Morning
",
    "end": 19,
    "frontmatter": Object {},
    "index": 2,
    "note": undefined,
    "raw": "
# Morning

",
    "start": 17,
    "title": "Morning",
  },
  Object {
    "content": "
<!-- This is not notes -->
Hey
",
    "end": 24,
    "frontmatter": Object {
      "layout": "text",
    },
    "index": 3,
    "note": undefined,
    "raw": "---
layout: text
---

<!-- This is not notes -->
Hey

",
    "start": 19,
    "title": undefined,
  },
  Object {
    "content": "
\`\`\`md
---
this should be treated as code block
---
----
\`\`\`
",
    "end": 33,
    "frontmatter": Object {},
    "index": 4,
    "note": undefined,
    "raw": "
\`\`\`md
---
this should be treated as code block
---
----
\`\`\`

",
    "start": 25,
    "title": undefined,
  },
]
`;

exports[`md parser minimal.md: config 1`] = `
Object {
  "aspectRatio": 1.7777777777777777,
  "canvasWidth": 980,
  "colorSchema": "auto",
  "download": false,
  "fonts": Object {
    "italic": false,
    "local": Array [],
    "mono": Array [
      "ui-monospace",
      "SFMono-Regular",
      "Menlo",
      "Monaco",
      "Consolas",
      "\\"Liberation Mono\\"",
      "\\"Courier New\\"",
      "monospace",
    ],
    "provider": "google",
    "sans": Array [
      "ui-sans-serif",
      "system-ui",
      "-apple-system",
      "BlinkMacSystemFont",
      "\\"Segoe UI\\"",
      "Roboto",
      "\\"Helvetica Neue\\"",
      "Arial",
      "\\"Noto Sans\\"",
      "sans-serif",
      "\\"Apple Color Emoji\\"",
      "\\"Segoe UI Emoji\\"",
      "\\"Segoe UI Symbol\\"",
      "\\"Noto Color Emoji\\"",
    ],
    "serif": Array [
      "ui-serif",
      "Georgia",
      "Cambria",
      "\\"Times New Roman\\"",
      "Times",
      "serif",
    ],
    "webfonts": Array [],
    "weights": Array [
      "200",
      "400",
      "600",
    ],
  },
  "highlighter": "prism",
  "info": false,
  "monaco": "dev",
  "remoteAssets": true,
  "routerMode": "history",
  "selectable": false,
  "theme": "default",
  "themeConfig": Object {},
  "title": "H1",
}
`;

exports[`md parser minimal.md: features 1`] = `
Object {
  "katex": false,
  "mermaid": false,
  "monaco": false,
  "tweet": false,
}
`;

exports[`md parser minimal.md: slides 1`] = `
Array [
  Object {
    "content": "
# H1
## H2
### H3

Sample Text

\`\`\`ts
console.log('Hello World')
\`\`\`
",
    "end": 10,
    "frontmatter": Object {
      "title": "H1",
    },
    "index": 0,
    "note": undefined,
    "raw": "---
title: H1
---

# H1
## H2
### H3

Sample Text

\`\`\`ts
console.log('Hello World')
\`\`\`

",
    "start": 0,
    "title": "H1",
  },
  Object {
    "content": "
# Hello

- Hello
- Hi
- Hey
- Yo
",
    "end": 18,
    "frontmatter": Object {},
    "index": 1,
    "note": undefined,
    "raw": "
# Hello

- Hello
- Hi
- Hey
- Yo

",
    "start": 11,
    "title": "Hello",
  },
  Object {
    "content": "
Nice to meet you
",
    "end": 22,
    "frontmatter": Object {},
    "index": 2,
    "note": undefined,
    "raw": "
Nice to meet you

",
    "start": 19,
    "title": undefined,
  },
]
`;

exports[`md parser multi-entries.md: config 1`] = `
Object {
  "aspectRatio": 1.7777777777777777,
  "canvasWidth": 980,
  "colorSchema": "auto",
  "download": false,
  "fonts": Object {
    "italic": false,
    "local": Array [],
    "mono": Array [
      "ui-monospace",
      "SFMono-Regular",
      "Menlo",
      "Monaco",
      "Consolas",
      "\\"Liberation Mono\\"",
      "\\"Courier New\\"",
      "monospace",
    ],
    "provider": "google",
    "sans": Array [
      "ui-sans-serif",
      "system-ui",
      "-apple-system",
      "BlinkMacSystemFont",
      "\\"Segoe UI\\"",
      "Roboto",
      "\\"Helvetica Neue\\"",
      "Arial",
      "\\"Noto Sans\\"",
      "sans-serif",
      "\\"Apple Color Emoji\\"",
      "\\"Segoe UI Emoji\\"",
      "\\"Segoe UI Symbol\\"",
      "\\"Noto Color Emoji\\"",
    ],
    "serif": Array [
      "ui-serif",
      "Georgia",
      "Cambria",
      "\\"Times New Roman\\"",
      "Times",
      "serif",
    ],
    "webfonts": Array [],
    "weights": Array [
      "200",
      "400",
      "600",
    ],
  },
  "highlighter": "prism",
  "info": false,
  "monaco": "dev",
  "remoteAssets": true,
  "routerMode": "history",
  "selectable": false,
  "src": "sub/page1.md",
  "theme": "default",
  "themeConfig": Object {},
  "title": undefined,
}
`;

exports[`md parser multi-entries.md: features 1`] = `
Object {
  "katex": true,
  "mermaid": false,
  "monaco": false,
  "tweet": true,
}
`;

exports[`md parser multi-entries.md: slides 1`] = `
Array [
  Object {
    "content": "
# Page 1
",
    "end": 4,
    "frontmatter": Object {
      "src": "sub/page1.md",
      "title": undefined,
    },
    "index": 0,
    "inline": Object {
      "content": "",
      "end": 4,
      "frontmatter": Object {
        "src": "sub/page1.md",
        "title": undefined,
      },
      "index": 0,
      "note": undefined,
      "raw": "---
src: sub/page1.md
---
",
      "start": 0,
      "title": undefined,
    },
    "note": undefined,
    "raw": "---
src: sub/page1.md
---

# Page 1

",
    "source": Object {
      "content": "# Page 1",
      "frontmatter": Object {},
      "note": undefined,
      "raw": "# Page 1
",
      "title": "Page 1",
    },
    "start": 0,
    "title": "Page 1",
  },
  Object {
    "content": "
# Page 2

<Tweet />
",
    "end": 9,
    "frontmatter": Object {
      "background": "https://sli.dev/demo-cover.png",
      "layout": "cover",
      "src": "sub/page2.md",
    },
    "index": 1,
    "inline": Object {
      "content": "",
      "end": 9,
      "frontmatter": Object {
        "background": "https://sli.dev/demo-cover.png",
        "src": "sub/page2.md",
      },
      "index": 1,
      "note": undefined,
      "raw": "---
src: sub/page2.md
background: https://sli.dev/demo-cover.png
---
",
      "start": 4,
      "title": undefined,
    },
    "note": undefined,
    "raw": "---
layout: cover
src: sub/page2.md
background: https://sli.dev/demo-cover.png
---

# Page 2

<Tweet />

",
    "source": Object {
      "content": "# Page 2

<Tweet />",
      "frontmatter": Object {
        "layout": "cover",
      },
      "note": undefined,
      "raw": "---
layout: cover
---

# Page 2

<Tweet />
",
      "title": "Page 2",
    },
    "start": 4,
    "title": "Page 2",
  },
  Object {
    "content": "
# Inline Page

$x+2$
",
    "end": 15,
    "frontmatter": Object {},
    "index": 2,
    "note": undefined,
    "raw": "
# Inline Page

$x+2$

",
    "start": 10,
    "title": "Inline Page",
  },
]
`;
